# tierlistbuilder

./: .env.example  .gitignore  .prettierignore  CHANGELOG.md  README.md  eslint.config.js  index.html  knip.json  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
config/: aliases.ts
convex/: README.md  auth.config.ts  auth.ts  convex.config.ts  crons.ts  getHealth.ts  http.ts  schema.ts  tsconfig.json  users.ts
dev-docs/: simplify-review-2026-05-06.md
docs/: architecture.md  design-system.mdx
e2e/: account.spec.ts  (+5 more)
scripts/seed_pipeline/: README.md  pyproject.toml
scripts/seed_pipeline/seed_pipeline/: __init__.py  __main__.py  assets.py  audit.py  build.py  cli.py  concurrency.py  content_hash.py  convex_client.py  crop.py  dev_reset.py  dev_reset_local.py  diff.py  manifest.py  progress.py  ranking_config.py  rankings.py  report_layout.py  reports.py  run_context.py  runs.py  settings.py  sidecars.py  source.py  template_payloads.py  validate.py
scripts/seed_pipeline/seed_pipeline/schemas/: compiled-manifest.schema.json  marketplace-core.schema.json  ranking-profiles.schema.json  template.schema.json
scripts/seed_pipeline/tests/: test_assets.py  test_cli.py  test_content_hash.py  test_contract_schema.py  test_convex_client.py  test_crop.py  test_dev_reset.py  test_dev_reset_local.py  test_diff.py  test_manifest.py  test_rankings.py  test_report_layout.py  test_runs.py
scripts/seed_pipeline/tests/fixtures/: compiled-manifest.example.json
(+1793 files in other folders)
