[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tierlistbuilder-seed-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["jsonschema>=4.22", "Pillow>=10.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["seed_pipeline*"]
